src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_gftt jyppx_ocv_features2d_gftt;
typedef struct jyppx_ocv_features2d_mser jyppx_ocv_features2d_mser;
typedef struct jyppx_ocv_features2d_simple_blob jyppx_ocv_features2d_simple_blob;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_max_features(jyppx_ocv_features2d_gftt* gftt, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_quality_level(const jyppx_ocv_features2d_gftt* gftt, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_quality_level(jyppx_ocv_features2d_gftt* gftt, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_min_distance(const jyppx_ocv_features2d_gftt* gftt, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_min_distance(jyppx_ocv_features2d_gftt* gftt, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_block_size(const jyppx_ocv_features2d_gftt* gftt, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_block_size(jyppx_ocv_features2d_gftt* gftt, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_gradient_size(const jyppx_ocv_features2d_gftt* gftt, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_gradient_size(jyppx_ocv_features2d_gftt* gftt, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_harris_detector(const jyppx_ocv_features2d_gftt* gftt, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_harris_detector(jyppx_ocv_features2d_gftt* gftt, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_k(const jyppx_ocv_features2d_gftt* gftt, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_set_k(jyppx_ocv_features2d_gftt* gftt, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_detect_count(const jyppx_ocv_features2d_gftt* gftt, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_detect_fill(const jyppx_ocv_features2d_gftt* gftt, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_create(
    int delta,
    int min_area,
    int max_area,
    double max_variation,
    double min_diversity,
    int max_evolution,
    double area_threshold,
    double min_margin,
    int edge_blur_size,
    jyppx_ocv_features2d_mser** mser);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_mser_release(
    jyppx_ocv_features2d_mser* mser);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_clear(jyppx_ocv_features2d_mser* mser);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_empty(const jyppx_ocv_features2d_mser* mser, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_descriptor_size(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_descriptor_type(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_default_norm(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_detect_count(const jyppx_ocv_features2d_mser* mser, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_detect_fill(const jyppx_ocv_features2d_mser* mser, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_delta(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_delta(jyppx_ocv_features2d_mser* mser, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_min_area(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_min_area(jyppx_ocv_features2d_mser* mser, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_max_area(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_max_area(jyppx_ocv_features2d_mser* mser, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_max_variation(const jyppx_ocv_features2d_mser* mser, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_max_variation(jyppx_ocv_features2d_mser* mser, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_min_diversity(const jyppx_ocv_features2d_mser* mser, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_min_diversity(jyppx_ocv_features2d_mser* mser, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_max_evolution(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_max_evolution(jyppx_ocv_features2d_mser* mser, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_area_threshold(const jyppx_ocv_features2d_mser* mser, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_area_threshold(jyppx_ocv_features2d_mser* mser, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_min_margin(const jyppx_ocv_features2d_mser* mser, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_min_margin(jyppx_ocv_features2d_mser* mser, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_edge_blur_size(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_edge_blur_size(jyppx_ocv_features2d_mser* mser, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_get_pass2_only(const jyppx_ocv_features2d_mser* mser, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_set_pass2_only(jyppx_ocv_features2d_mser* mser, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_detect_regions_count(
    const jyppx_ocv_features2d_mser* mser,
    const jyppx_ocv_mat* image,
    int* region_count,
    int* total_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_detect_regions_fill(
    const jyppx_ocv_features2d_mser* mser,
    const jyppx_ocv_mat* image,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_point* points,
    int point_capacity,
    jyppx_ocv_rect* bboxes,
    int bbox_capacity,
    int* region_count,
    int* total_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_create_default(
    jyppx_ocv_features2d_simple_blob** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_create(
    const jyppx_ocv_simple_blob_params* parameters,
    jyppx_ocv_features2d_simple_blob** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_simple_blob_release(
    jyppx_ocv_features2d_simple_blob* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_clear(jyppx_ocv_features2d_simple_blob* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_empty(const jyppx_ocv_features2d_simple_blob* detector, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_descriptor_size(const jyppx_ocv_features2d_simple_blob* detector, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_descriptor_type(const jyppx_ocv_features2d_simple_blob* detector, int* value);